los contenidos ahora estan cargados como objetos de tipo json

--- a/unidad1.html
+++ b/unidad1.html
@@ -107,19 +107,18 @@
                         style="background-color: #5B8D74;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
-
-                                <a contador="0"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a3tutorialButton">
-                                    <i contador="0" class="deskOption material-icons clbktx">extension</i>
-                                    <p contador="0" class="deskOption clbktx">Unidad de competencia</p>
+                                <!-- Unidad de competencia -->
+                                <a seccion-id="unidadCompetencia"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
+                                    <i seccion-id="unidadCompetencia" class="deskOption material-icons clbktx">extension</i>
+                                    <p seccion-id="unidadCompetencia" class="deskOption clbktx">Unidad de competencia</p>
                                 </a>
                                 
-                                <a contador="1"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a3tutorialButton">
-                                    <i contador="1" class="deskOption material-icons clbktx">assessment</i>
-                                    <p contador="1" class="deskOption clbktx">Evaluación de los aprendizajes</p>
+                                <!-- Evaluación de los aprendizajes -->
+                                <a seccion-id="evaluacionAprendizajes"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
+                                    <i seccion-id="evaluacionAprendizajes" class="deskOption material-icons clbktx">assessment</i>
+                                    <p seccion-id="evaluacionAprendizajes" class="deskOption clbktx">Evaluación de los aprendizajes</p>
                                 </a>
 
                                 <ul id="a2tutorialButton" class="collapsible clgreyl2 border1 shadow2">
@@ -127,47 +126,47 @@
                                         <div class="collapsible-header clgreyl2 clbktx"><i
                                                 class="material-icons">local_library</i>Contenidos</div>
                                         <div class="collapsible-body">
-                                            <a contador="2"
+                                            <a seccion-id="introduccion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 Introducción
                                             </a>
-                                            <a contador="3"
+                                            <a seccion-id="unidad1_1_proyectos"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 1.1 Proyectos 
                                             </a>
-                                            <a contador="4"
+                                            <a seccion-id="unidad1_1_1_clasificacion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.1.1 Clasificación 
                                             </a>
-                                            <a contador="5"
+                                            <a seccion-id="unidad1_1_2_proyecto_informatico"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.1.2 Proyecto informático
                                             </a>
-                                            <a contador="6"
+                                            <a seccion-id="unidad1_1_3_elementos_proyecto"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.1.3 Elementos de un proyecto
                                             </a>
-                                            <a contador="7"
+                                            <a seccion-id="unidad1_2_ciclo_vida_proyectos_software"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 1.2 Ciclo de vida de los proyectos y del software 
                                             </a>
-                                            <a contador="8"
+                                            <a seccion-id="unidad1_3_formulacion_proyecto_informatico"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 1.3 Formulación de un proyecto informático
                                             </a>
-                                            <a contador="9"
+                                            <a seccion-id="unidad1_3_1_planteamiento_problema_analisis"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.3.1 Planteamiento del problema y técnicas de análisis
                                             </a>
-                                            <a contador="10"
+                                            <a seccion-id="unidad1_3_2_antecedentes_situacion_actual"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.3.2 Antecedentes y situación actual 
                                             </a>
-                                            <a contador="11"
+                                            <a seccion-id="unidad1_3_3_identificacion_seleccion_alternativas"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.3.3 Identificación y selección de alternativas
                                             </a>
-                                            <a contador="12"
+                                            <a seccion-id="unidad1_4_gestion_integracion_proyecto_informatico"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 1.4	Gestión de la integración del proyecto informático
                                             </a>
@@ -176,23 +175,21 @@
                                 </ul>
 
 
-                                <a contador=""
+                                <a seccion-id=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a9tutorialButton" href="SuperGlosario.html">
-                                    <i contador="" class="deskOption material-icons clbktx">library_books</i>
-                                    <p contador="" class="deskOption clbktx">Glosario</p>
+                                    <i seccion-id="" class="deskOption material-icons clbktx">library_books</i>
+                                    <p seccion-id="" class="deskOption clbktx">Glosario</p>
                                 </a>
-                                <a contador="13"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a3tutorialButton">
-                                    <i contador="13" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p contador="13" class="deskOption clbktx">Material de apoyo</p>
+                                <a seccion-id="material_apoyo"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
+                                    <i seccion-id="material_apoyo" class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p seccion-id="material_apoyo" class="deskOption clbktx">Material de apoyo</p>
                                 </a>
-                                <a contador="14"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a4tutorialButton">
-                                    <i contador="14" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p contador="14" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                <a seccion-id="actividades_aprendizaje"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
+                                    <i seccion-id="actividades_aprendizaje" class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p seccion-id="actividades_aprendizaje" class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
                                 <a href="unidad1_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
@@ -213,7 +210,7 @@
             <p class="textoTitulo white-text lateralMenuAdjustTextTitle">Secciones</p>
 
             <!--Inicio al sitio-->
-            <li><a contador="0" class="clbktx textoStandar clw border0 activeButtonTextLateral" href="unidad1.html"><i
+            <li><a seccion-id="0" class="clbktx textoStandar clw border0 activeButtonTextLateral" href="unidad1.html"><i
                         class="material-icons clbktx">looks_one</i>Inicio</a></li>
 
 
@@ -223,14 +220,14 @@
                         class="material-icons" id="primeraSeccionIcon">expand_more</i><b>Introducción</b>
                 </div>
 
-                <p contador="1"
+                <p seccion-id="1"
                     class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx primeraSeccionHide">
                     Introducción al recurso y contenido</p>
             </div>
 
             <div class="mobileOptionsContainer">
                 <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
+                <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a seccion-id=""
                         class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="manual.html"><i
                             class="material-icons clbktx">sos</i>Manual de usuario</a></li>
             </div>
@@ -240,14 +237,14 @@
                 <div class="truncate waves-effect clbktx clgreyl2 titleSectionMobileMenu" id="segundaSeccion"><i
                         class="material-icons" id="segundaSeccionIcon">expand_more</i><b>1.1 La empresa</b>
                 </div>
-                <p contador="2"
+                <p seccion-id="2"
                     class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
                     1.1 La empresa</p>
 
-                <p contador="3"
+                <p seccion-id="3"
                     class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
                     1.1.1 Constitución jurídica</p>
-                <p contador="4"
+                <p seccion-id="4"
                     class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
                     1.1.2 El área financiera en la estructura organizacional</p>
             </div>
@@ -256,47 +253,47 @@
 
             <div class="mobileOptionsContainer">
 
-                <li contador="5" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="5" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.2 Función y
+                <li seccion-id="5" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
+                        seccion-id="5" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.2 Función y
                         objetivo de las finanzas empresariales</a></li>
 
-                <li contador="6" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="6" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.3 Las finanzas
+                <li seccion-id="6" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
+                        seccion-id="6" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.3 Las finanzas
                         empresariales y su relación con otras disciplinas</a></li>
 
-                <li contador="7" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="7" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.4 Factores del
+                <li seccion-id="7" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
+                        seccion-id="7" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.4 Factores del
                         micro y macro ambiente que impactan a la empresa y a sus finanzas</a></li>
 
                 <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
+                <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a seccion-id=""
                         class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html"><i
                             class="material-icons clbktx">library_books</i>Glosario</a></li>
 
-                <li contador="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="8" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
+                <li seccion-id="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
+                        seccion-id="8" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
                             class="material-icons clbktx">auto_stories</i>Material de apoyo</a></li>
 
-                <li contador="9" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="9" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
+                <li seccion-id="9" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
+                        seccion-id="9" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
                             class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje</a></li>
 
                 <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
+                <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a seccion-id=""
                         class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
                         href="unidad1_evaluacion.html"><i class="material-icons clbktx">quiz</i>Evaluación</a></li>
 
-                <li contador="10" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="10" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
+                <li seccion-id="10" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
+                        seccion-id="10" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
                             class="material-icons clbktx">diversity_2</i>Cierre</a></li>
 
 
-                <li contador="11" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="11" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
+                <li seccion-id="11" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
+                        seccion-id="11" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
                         href="referencias.html"><i class="material-icons clbktx">format_quote</i>Referencias</a></li>
 
                 <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
+                <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a seccion-id=""
                         class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="contacto.html"><i
                             class="material-icons clbktx">alternate_email</i>Contacto</a></li>
 
