--- a/unidad2.html
+++ b/unidad2.html
@@ -107,19 +107,16 @@
                         style="background-color: #BD6D77;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
-
-                                <a contador="0"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a3tutorialButton">
-                                    <i contador="0" class="deskOption material-icons clbktx">extension</i>
-                                    <p contador="0" class="deskOption clbktx">Unidad de competencia</p>
+                                <a seccion-id="unidadCompetencia"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
+                                    <i seccion-id="unidadCompetencia" class="deskOption material-icons clbktx">extension</i>
+                                    <p seccion-id="unidadCompetencia" class="deskOption clbktx">Unidad de competencia</p>
                                 </a>
                                 
-                                <a contador="1"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a3tutorialButton">
-                                    <i contador="1" class="deskOption material-icons clbktx">assessment</i>
-                                    <p contador="1" class="deskOption clbktx">Evaluación de los aprendizajes</p>
+                                <a seccion-id="evaluacionAprendizajes"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
+                                    <i seccion-id="evaluacionAprendizajes" class="deskOption material-icons clbktx">assessment</i>
+                                    <p seccion-id="evaluacionAprendizajes" class="deskOption clbktx">Evaluación de los aprendizajes</p>
                                 </a>
 
                                 <ul id="a2tutorialButton" class="collapsible clgreyl2 border1 shadow2">
@@ -127,39 +124,39 @@
                                         <div class="collapsible-header clgreyl2 clbktx"><i
                                                 class="material-icons">local_library</i>Contenidos</div>
                                         <div class="collapsible-body">
-                                            <a contador="2"
+                                            <a seccion-id="introduccion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
                                                 Introducción
                                             </a>
-                                            <a contador="3"
+                                            <a seccion-id="innovacion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
                                                 2.1 Innovación
                                             </a>
-                                            <a contador="4"
+                                            <a seccion-id="designThinking"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
                                                 2.2 Design thinking metodología de innovación
                                             </a>
-                                            <a contador="5"
+                                            <a seccion-id="empatizar"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.1 Empatizar con el usuario y explorar el mercado
                                             </a>
-                                            <a contador="6"
+                                            <a seccion-id="definirNecesidades"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.2 Definir necesidades del usuario
                                             </a>
-                                            <a contador="7"
+                                            <a seccion-id="idearConPropuesta"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.3 Idear con propuesta de valor
                                             </a>
-                                            <a contador="8"
+                                            <a seccion-id="prototiparLaIdea"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.4 Prototipar la idea
                                             </a>
-                                            <a contador="9"
+                                            <a seccion-id="testeo"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.5 Testeo (validar)
                                             </a>
-                                            <a contador="10"
+                                            <a seccion-id="modeloNegocios"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
                                                 2.3 Modelo de negocios Canvas
                                             </a>
@@ -168,23 +165,23 @@
                                 </ul>
 
 
-                                <a contador=""
+                                <a seccion-id=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a9tutorialButton" href="SuperGlosario.html">
-                                    <i contador="" class="deskOption material-icons clbktx">library_books</i>
-                                    <p contador="" class="deskOption clbktx">Glosario</p>
+                                    <i seccion-id="" class="deskOption material-icons clbktx">library_books</i>
+                                    <p seccion-id="" class="deskOption clbktx">Glosario</p>
                                 </a>
-                                <a contador="11"
+                                <a seccion-id="materialApoyo"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a3tutorialButton">
-                                    <i contador="11" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p contador="11" class="deskOption clbktx">Material de apoyo</p>
+                                    <i seccion-id="materialApoyo" class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p seccion-id="materialApoyo" class="deskOption clbktx">Material de apoyo</p>
                                 </a>
-                                <a contador="12"
+                                <a seccion-id="actividadesAprendizaje"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a4tutorialButton">
-                                    <i contador="12" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p contador="12" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                    <i seccion-id="actividadesAprendizaje" class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p seccion-id="actividadesAprendizaje" class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
                                 <a href="unidad2_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
@@ -205,77 +202,99 @@
             <p class="textoTitulo white-text lateralMenuAdjustTextTitle">Secciones</p>
 
             <!--Inicio al sitio-->
-            <li><a contador="0" class="clbktx textoStandar clw border0 activeButtonTextLateral">
+            <li><a seccion-id="0" class="clbktx textoStandar clw border0 activeButtonTextLateral">
                 <i class="material-icons clbktx">extension</i>Unidad de competencia</a>
             </li>
 
-            <li><a contador="1" class="clbktx textoStandar clw border0">
+            <li><a seccion-id="1" class="clbktx textoStandar clw border0">
                 <i class="material-icons clbktx">assessment</i>Evaluación de los aprendizajes</a>
             </li>
 
-            <li><a contador="2" class="clbktx textoStandar clw border0">Introducción</a></li>
+            <li><a seccion-id="2" class="clbktx textoStandar clw border0">Introducción</a></li>
 
             <!--Contenidos principales-->
             <div class="mobileOptionsContainer">
-                <li contador="3" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="3" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.1 Innovación</a>
+                <li><a seccion-id="unidadCompetencia" class="mobileOption clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx">extension</i>Unidad de competencia</a>
                 </li>
 
-                <li contador="4" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="4" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2 Design thinking metodología de innovación</a>
+                <li><a seccion-id="evaluacionAprendizajes" class="mobileOption clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx">assessment</i>Evaluación de los aprendizajes</a>
                 </li>
 
-                <li contador="5" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="5" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.1 Empatizar con el usuario y explorar el mercado</a>
-                </li>
+                <li><a seccion-id="introduccion" class="mobileOption clbktx textoStandar clw border0">Introducción</a></li>
 
-                <li contador="6" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="6" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.2 Definir necesidades del usuario</a>
-                </li>
+                <!--Contenidos principales-->
+                <div class="mobileOptionsContainer">
+                    <li seccion-id="innovacion" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="innovacion" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            2.1 Innovación
+                        </a>
+                    </li>
+                    <li seccion-id="designThinking" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="designThinking" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            2.2 Design thinking metodología de innovación
+                        </a>
+                    </li>
+                    <li seccion-id="empatizar" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="empatizar" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            2.2.1 Empatizar con el usuario y explorar el mercado
+                        </a>
+                    </li>
+                    <li seccion-id="definirNecesidades" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="definirNecesidades" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            2.2.2 Definir necesidades del usuario
+                        </a>
+                    </li>
+                    <li seccion-id="idearConPropuesta" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="idearConPropuesta" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            2.2.3 Idear con propuesta de valor
+                        </a>
+                    </li>
+                    <li seccion-id="prototiparLaIdea" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="prototiparLaIdea" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            2.2.4 Prototipar la idea
+                        </a>
+                    </li>
+                    <li seccion-id="testeo" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="testeo" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            2.2.5 Testeo (validar)
+                        </a>
+                    </li>
+                    <li seccion-id="modeloNegocios" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="modeloNegocios" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            2.3 Modelo de negocios Canvas
+                        </a>
+                    </li>
 
-                <li contador="7" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="7" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.3 Idear con propuesta de valor</a>
-                </li>
+                    <!--Glosario-->
+                    <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="" class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html">
+                            <i class="material-icons clbktx">library_books</i>Glosario
+                        </a>
+                    </li>
 
-                <li contador="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="8" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.4 Prototipar la idea</a>
-                </li>
+                    <!--Material de apoyo-->
+                    <li seccion-id="11" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="11" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            <i class="material-icons clbktx">auto_stories</i>Material de apoyo
+                        </a>
+                    </li>
 
-                <li contador="9" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="9" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.5 Testeo (validar)</a>
-                </li>
+                    <!--Actividades-->
+                    <li seccion-id="12" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="12" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                            <i class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje
+                        </a>
+                    </li>
 
-                <li contador="10" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="10" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.3 Modelo de negocios Canvas</a>
-                </li>
-
-                <!--Glosario-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="" class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html">
-                        <i class="material-icons clbktx">library_books</i>Glosario
-                    </a>
-                </li>
-
-                <!--Material de apoyo-->
-                <li contador="11" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="11" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
-                        <i class="material-icons clbktx">auto_stories</i>Material de apoyo
-                    </a>
-                </li>
-
-                <!--Actividades-->
-                <li contador="12" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="12" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
-                        <i class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje
-                    </a>
-                </li>
-
-                <!--Evaluación (link externo)-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                    <a contador="" class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="unidad2_evaluacion.html">
-                        <i class="material-icons clbktx">quiz</i>Evaluación
-                    </a>
-                </li>
+                    <!--Evaluación (link externo)-->
+                    <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="" class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="unidad2_evaluacion.html">
+                            <i class="material-icons clbktx">quiz</i>Evaluación
+                        </a>
+                    </li>
+                </div>
             </div>
         </ul>
 
