--- a/unidad3.html
+++ b/unidad3.html
@@ -107,18 +107,18 @@
                         style="background-color: #8470B3;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
-                                <a contador="0"
+                                <a seccion-id="unidadCompetencia"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2 activeLinkOptionsContentUnit3"
                                     id="a1tutorialButton">
-                                    <i contador="0" class="deskOption material-icons clbktx">extension</i>
-                                    <p contador="0" class="deskOption clbktx">Unidad de competencia</p>
+                                    <i seccion-id="unidadCompetencia" class="deskOption material-icons clbktx">extension</i>
+                                    <p seccion-id="unidadCompetencia" class="deskOption clbktx">Unidad de competencia</p>
                                 </a>
 
-                                <a contador="1"
+                                <a seccion-id="evaluacionAprendizajes"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a3tutorialButton">
-                                    <i contador="1" class="deskOption material-icons clbktx">assessment</i>
-                                    <p contador="1" class="deskOption clbktx">Evaluación de los aprendizajes</p>
+                                    <i seccion-id="evaluacionAprendizajes" class="deskOption material-icons clbktx">assessment</i>
+                                    <p seccion-id="evaluacionAprendizajes" class="deskOption clbktx">Evaluación de los aprendizajes</p>
                                 </a>
                                 
 
@@ -127,48 +127,48 @@
                                         <div class="collapsible-header clgreyl2 clbktx"><i
                                                 class="material-icons">local_library</i>Contenidos</div>
                                         <div class="collapsible-body">
-                                            <a contador="2"
+                                            <a seccion-id="introduccion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
                                                 Introducción
                                             </a>
-                                            <a contador="3"
+                                            <a seccion-id="planGestion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
                                                 3.1 Plan de gestión para la dirección del proyecto 
                                             </a>
-                                            <a contador="4"
+                                            <a seccion-id="gestionIntegracion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
                                                 3.1.1 Gestión de Integración del proyecto 
                                             </a>
-                                            <a contador="5"
+                                            <a seccion-id="gestionConocimiento"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
                                                 3.1.2 Gestión del conocimiento
                                             </a>
-                                            <a contador="6"
+                                            <a seccion-id="planDesarrollo"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
                                                 3.2 Plan de desarrollo del software 
                                             </a>
-                                            <a contador="7"
+                                            <a seccion-id="actividadesAnalisis"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
                                                 3.2.1 Actividades para el análisis de requerimientos y diseño de la arquitectura del software 
  
                                             </a>
-                                            <a contador="8"
+                                            <a seccion-id="actividadesProgramacion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
                                                 3.2.2 Actividades para la programación 
                                             </a>
-                                            <a contador="9"
+                                            <a seccion-id="actividadesPruebas"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
                                                 3.2.3 Actividades para las pruebas e implementación 
                                             </a>
-                                            <a contador="10"
+                                            <a seccion-id="actividadesDespliegue"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
                                                 3.2.4 Actividades para el despliegue y mantenimiento
                                             </a>
-                                            <a contador="11"
+                                            <a seccion-id="documentacion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
                                                 3.2.5 Documentación  
                                             </a>
-                                            <a contador="12"
+                                            <a seccion-id="gestionSostenibilidad"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 mainSectionMenu leftBorderUnit3">
                                                 3.3 Gestión de sostenibilidad
                                             </a>
@@ -177,23 +177,23 @@
                                 </ul>
 
 
-                                <a contador=""
+                                <a seccion-id=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a9tutorialButton" href="SuperGlosario.html">
-                                    <i contador="" class="deskOption material-icons clbktx">library_books</i>
-                                    <p contador="" class="deskOption clbktx">Glosario</p>
+                                    <i seccion-id="" class="deskOption material-icons clbktx">library_books</i>
+                                    <p seccion-id="" class="deskOption clbktx">Glosario</p>
                                 </a>
-                                <a contador="8"
+                                <a seccion-id="materialApoyo"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a3tutorialButton">
-                                    <i contador="8" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p contador="8" class="deskOption clbktx">Material de apoyo</p>
+                                    <i seccion-id="materialApoyo" class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p seccion-id="materialApoyo" class="deskOption clbktx">Material de apoyo</p>
                                 </a>
-                                <a contador="9"
+                                <a seccion-id="actividades"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a4tutorialButton">
-                                    <i contador="9" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p contador="9" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                    <i seccion-id="actividades" class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p seccion-id="actividades" class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
                                 <a href="unidad3_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
@@ -214,40 +214,40 @@
             <p class="textoTitulo white-text lateralMenuAdjustTextTitle">Secciones</p>
 
             <div class="mobileOptionsContainer">
-                <li><a contador="0" class="clbktx textoStandar clw border0">
-                    <i class="material-icons clbktx">extension</i>Unidad de competencia</a>
+                <li><a seccion-id="unidadCompetencia" class="mobileOption clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx mobileOption" seccion-id="unidadCompetencia">extension</i>Unidad de competencia</a>
                 </li>
 
-                <li><a contador="1" class="clbktx textoStandar clw border0">
-                    <i class="material-icons clbktx">assessment</i>Evaluación de los aprendizajes</a>
+                <li><a seccion-id="evaluacionAprendizajes" class="mobileOption clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx mobileOption" seccion-id="evaluacionAprendizajes">assessment</i>Evaluación de los aprendizajes</a>
                 </li>
 
-                <li><a contador="2" class="clbktx textoStandar clw border0">Introducción</a></li>
+                <li><a seccion-id="introduccion" class="mobileOption clbktx textoStandar clw border0">Introducción</a></li>
 
-                <li><a contador="3" class="clbktx textoStandar clw border0">3.1 Plan de gestión para la dirección del proyecto</a></li>
-                <li><a contador="4" class="clbktx textoStandar clw border0">3.1.1 Gestión de Integración del proyecto</a></li>
-                <li><a contador="5" class="clbktx textoStandar clw border0">3.1.2 Gestión del conocimiento</a></li>
-                <li><a contador="6" class="clbktx textoStandar clw border0">3.2 Plan de desarrollo del software</a></li>
-                <li><a contador="7" class="clbktx textoStandar clw border0">3.2.1 Actividades para el análisis de requerimientos y diseño</a></li>
-                <li><a contador="8" class="clbktx textoStandar clw border0">3.2.2 Actividades para la programación</a></li>
-                <li><a contador="9" class="clbktx textoStandar clw border0">3.2.3 Actividades para las pruebas e implementación</a></li>
-                <li><a contador="10" class="clbktx textoStandar clw border0">3.2.4 Actividades para el despliegue y mantenimiento</a></li>
-                <li><a contador="11" class="clbktx textoStandar clw border0">3.2.5 Documentación</a></li>
-                <li><a contador="12" class="clbktx textoStandar clw border0">3.3 Gestión de sostenibilidad</a></li>
+                <li><a seccion-id="planGestion" class="mobileOption clbktx textoStandar clw border0">3.1 Plan de gestión para la dirección del proyecto</a></li>
+                <li><a seccion-id="gestionIntegracion" class="mobileOption clbktx textoStandar clw border0">3.1.1 Gestión de Integración del proyecto</a></li>
+                <li><a seccion-id="gestionConocimiento" class="mobileOption clbktx textoStandar clw border0">3.1.2 Gestión del conocimiento</a></li>
+                <li><a seccion-id="planDesarrollo" class="mobileOption clbktx textoStandar clw border0">3.2 Plan de desarrollo del software</a></li>
+                <li><a seccion-id="actividadesAnalisis" class="mobileOption clbktx textoStandar clw border0">3.2.1 Actividades para el análisis de requerimientos y diseño</a></li>
+                <li><a seccion-id="actividadesProgramacion" class="mobileOption clbktx textoStandar clw border0">3.2.2 Actividades para la programación</a></li>
+                <li><a seccion-id="actividadesPruebas" class="mobileOption clbktx textoStandar clw border0">3.2.3 Actividades para las pruebas e implementación</a></li>
+                <li><a seccion-id="actividadesDespliegue" class="mobileOption clbktx textoStandar clw border0">3.2.4 Actividades para el despliegue y mantenimiento</a></li>
+                <li><a seccion-id="documentacion" class="mobileOption clbktx textoStandar clw border0">3.2.5 Documentación</a></li>
+                <li><a seccion-id="gestionSostenibilidad" class="mobileOption clbktx textoStandar clw border0">3.3 Gestión de sostenibilidad</a></li>
 
-                <li><a contador="" class="clbktx textoStandar clw border0" href="SuperGlosario.html">
+                <li><a seccion-id="" class="clbktx textoStandar clw border0" href="SuperGlosario.html">
                     <i class="material-icons clbktx">library_books</i>Glosario</a>
                 </li>
 
-                <li><a contador="13" class="clbktx textoStandar clw border0">
-                    <i class="material-icons clbktx">auto_stories</i>Material de apoyo</a>
+                <li><a seccion-id="materialApoyo" class="mobileOption clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx mobileOption" seccion-id="materialApoyo">auto_stories</i>Material de apoyo</a>
                 </li>
 
-                <li><a contador="14" class="clbktx textoStandar clw border0">
-                    <i class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje</a>
+                <li><a seccion-id="actividades" class="mobileOption clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx mobileOption" seccion-id="actividades">fitness_center</i>Actividades de aprendizaje</a>
                 </li>
 
-                <li><a contador="" class="clbktx textoStandar clw border0" href="unidad3_evaluacion.html">
+                <li><a seccion-id="" class="clbktx textoStandar clw border0" href="unidad3_evaluacion.html">
                     <i class="material-icons clbktx">quiz</i>Evaluación</a>
                 </li>
             </div>
